# opengrasp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.yml  portals.example.yml  pyproject.toml
.agent/: API.md  ARCHITECTURE.md  DECISIONS.md  ENV.md  PROGRESS.md
.github/workflows/: auto-tag-from-version.yml
agent/: __init__.py  cv_builder.py  evaluator.py  ollama_client.py  scanner.py  scraper.py
agent/prompts/: apply_form.md  compare_offers.md  cover_letter.md  deep_research.md  evaluate.md  outreach.md  scan_query.md  tailor_cv.md
cli/: __init__.py  main.py  pipeline_queue.py  ui.py
cli/assets/: portals.example.yml
cli/commands/: __init__.py  apply.py  batch.py  compare.py  doctor.py  learn.py  outreach.py  pipeline.py  portal.py  research.py  reset.py  scan.py  setup.py  tracker.py  update.py
cli/flows/: offer_pipeline.py
docs/: ARCHITECTURE.md  PUBLISH.md  SETUP.md
memory/: db.py  schema.sql
scripts/: publish.ps1
